@@ -192,3 +192,7 @@ Problem:
 
 Resolution:
   Add an < isValid () : Boolean >method;
+
+===============================================================================
+===============================================================================
+===============================================================================
