@@ -1,5 +1,9 @@
 2012-01-31  Angelo  <angelo@icorsaro.net>
 
+	* Added support for OpenSplice DDS v5.x and v6.x
+
+2011-10-07  Angelo Corsaro  <angelo@icorsaro.net>
+
 	* Moved the IDL files to another project that takes care of
 	building a jar.
 
